--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-cayman
-title: Title
-description: Tagline
-level: Beginner/Intermediate/Advanced 
+title: Using Timeline JS
+description: How to create a timeline with Timeline JS and publish it to your Omeka website
+level: Beginner
